--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ dev-dependencies = [
     "pytest-cov>=5.0.0",
     "pytest-textual-snapshot>=1.0.0",
     "mkdocs-material>=9.5.30",
+    "pyinstaller>=6.11.1",
 ]
 
 [tool.hatch.metadata]
