--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,11 @@ dependencies = [
     "pyyaml>=6.0.2,<7.0.0",
     "pydantic-settings>=2.4.0,<3.0.0",
     "python-dotenv>=1.0.1,<2.0.0",
-    "textual[syntax]==2.1.1",
     # pinned intentionally
     "textual-autocomplete==4.0.0a0",
     # pinned intentionally
     "watchfiles>=0.24.0",
+    "textual[syntax]>=2.1.2,<2.2.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
