Update deps but limit tree-sitter < 0.25.0
Fixes #281, until Textual is updated.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "watchfiles>=0.24.0",
     "textual[syntax]==3.0.0",
     "textual-autocomplete>=4.0.4,<5.0.0",
+    "tree-sitter<0.25.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
