--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     # pinned intentionally
     "watchfiles>=0.24.0",
     "textual[syntax]==6.1.0",
-    "textual-autocomplete>=4.0.4,<5.0.0",
+    "textual-autocomplete==4.0.6",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
@@ -61,6 +61,9 @@ dev-dependencies = [
     "mkdocs-material>=9.5.30",
     "pyinstrument>=5.0.1",
 ]
+
+[tool.uv.sources]
+textual-autocomplete = { path = "../textual-autocomplete", editable = true }
 
 [tool.hatch.metadata]
 allow-direct-references = true
